# ImgRAG

./: .dockerignore  CLAUDE.md  Dockerfile  README.docker.md  docker-compose.yml  how_to_use.md  pyproject.toml  readme.md  requirements.txt
app/: app.py
app/pages/: 00_Home.py  1_Upload.py  2_Search.py  3_Hash_Search.py  4_Index_Management.py  5_Ingest_Images.py  6_Rebuild_Index.py  7_Database_Status.py  8_Remove_Images.py
docs/: 001-date-tracking.md  002-embedding-database.md  003-image-format-conversion.md  004-image-downscaling.md  005-source-reorganization.md  006-embeddings-cli.md  007-streamlit-app.md  008-monitor-script.md  009-micro-server.md  010-unified-cli.md  011-embedding-analysis.md  012-cosine-similarity-option.md  013-docker-deployment.md  014-streamlit-index-management.md  015-index-coverage-analysis.md  016-split-index-management-pages.md  017-cache-reload-mechanism.md  018-merge-ingest-pages.md  019-structured-navigation.md
micro_server/: embedding.py  run.py  schemas.py  server.py
micro_server/models/: dinov2-base.json  dinov2-large.json
src/: __init__.py  cli.py  cli_embeddings.py  cli_full.py  cli_monitor.py
src/analysis/: embedding_analyzer.py  viewer.py  visualizer.py
src/api/: __init__.py  embedding_api.py
src/core/: __init__.py  models.py  monitor.py  scanner.py
src/storage/: __init__.py  database.py  embedding_db.py
